pages/home --> fixed overflow in service and rating card

--- a/client/src/pages/styles/Home.css
+++ b/client/src/pages/styles/Home.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Manrope:wght@200;300;400;500;600;700;800&family=Roboto:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Manrope:wght@200;300;400;500;600;700;800&family=Open+Sans:wght@600&family=Roboto:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Tilt+Neon&display=swap');
 
 .home {
   margin-top: 60px;
@@ -250,7 +251,7 @@
   width: 250px;
   height: 250px;
   margin: 30px;
-  padding: 30px;
+  padding: 5px;
   background-color: #334875;
 
   display: flex;
@@ -333,7 +334,7 @@
   width: 170px;
   height: 170px;
   margin: 30px;
-  padding: 30px;
+  padding: 7px;
 }
 
 .serviceCard h3 {
@@ -350,13 +351,13 @@
 .serviceCard p {
   color: #000;
   text-align: center;
-  font-family: Lato;
+  font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px; /* 120% */
   letter-spacing: 1.5px;
-  padding: 35px 0;
+  padding: 10px 0;
 }
 
 @media (max-width: 480px) {
